# CV-Analyzer

./: .coveragerc  .dockerignore  .env.example  .env.production.example  .env.test  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .pytest_test.db  AGENTS.md  BATCH_UPLOAD_GUIDE.md  CODEX_AUDIT_FINDINGS.md  DEPLOYMENT_USAGE_GUIDE.md  Dockerfile  FEATURES_COMPLETE_SUMMARY.md  FEATURE_IMPLEMENTATIONS.py  FEATURE_VERIFICATION.md  HYBRID_PRIVACY_MODEL.md  IMPLEMENTATION_GUIDE.md  IMPROVEMENT_SUMMARY.md  LARGE_BATCH_PROCESSING.md  LICENSE  LOCAL_PROCESSING_GUIDE.md  LOCAL_WORKER_IMPLEMENTATION.md  LOCAL_WORKER_PRODUCT_ROADMAP.md  MISSING_FEATURES_ANALYSIS.md  PROJECT_AUDIT_REPORT_2026-06-19.md  README.md  README_DEMO.txt  RECRUITER_IMPROVEMENTS.md  RECRUITER_PERSISTENCE_GUIDE.md  SAAS_LOCAL_PROCESSING_GUIDE.md  SAAS_USAGE_MODELS.md  SECURITY.md  TEST_DOCUMENTATION.md  TEST_README.md  TEST_WINDOWS.md  add_recruiter.py  alembic.ini  ats_config.yaml  (+42 more)
.codex/: config.toml
.gemini_scratch/: count_lines.ps1  count_lines.py  patch_cv_builder.py  patch_domain_service.py  patch_naming_service.py  patch_rewrite_service.py
.github/: dependabot.yml
agents/: __init__.py  extract_agent.py  normalize_agent.py
config/: aws.py
core/: __init__.py  app_lifecycle.py  http_runtime.py  metrics.py  ops_runtime.py  quota.py  request_utils.py  route_dependencies.py  runtime_bridge.py  timeutils.py
cv-analyzer/: .env  .env.test  manual_history_test.py  pytest_api_after_fix.txt  test_saas.py  test_saas.sh
deploy/: PRODUCTION_LAUNCH.md  nginx.production.conf  smoke_prod.sh
(+670 files in other folders)
